# pomodoro

./: .pre-commit-config.yaml  meson.build
data/: application.appdata.xml.in  com.github.lifeiscontent.pomodoro.appdata.xml.in  com.github.lifeiscontent.pomodoro.desktop.in  meson.build  pomodoro.desktop
meson/: post_install.py
po/: POTFILES  com.github.lifeiscontent.pomodoro.pot  de.po  es.po  meson.build
src/: Application.vala  ApplicationWindow.vala  InMemoryStore.vala  NewTaskBox.vala  Store.vala  Task.vala  TaskBox.vala  TaskListStore.vala  TaskStack.vala  TaskTreeView.vala  meson.build
