executable(
    meson.project_name(),
    'Application.vala',
    'ApplicationWindow.vala',
    'NewTaskBox.vala',
    'TaskTreeView.vala',
    'InMemoryStore.vala',
    'Task.vala',
    'Store.vala',
    'TaskBox.vala',
    'TaskStack.vala',
    dependencies: [
        dependency('gtk+-3.0'),
        dependency('gee-0.8')
    ],
    install: true
)
